--- a/base/demo/podinfo/deployment.yaml
+++ b/base/demo/podinfo/deployment.yaml
@@ -25,26 +25,32 @@ spec:
         scheduler: fargate
     spec:
       containers:
-      - name: podinfod
-        image: stefanprodan/podinfo:3.1.0
-        imagePullPolicy: IfNotPresent
-        ports:
-        - name: http
-          containerPort: 9898
-          protocol: TCP
-        - name: http-metrics
-          containerPort: 9797
-          protocol: TCP
-        - name: grpc
-          containerPort: 9999
-          protocol: TCP
-        command:
-        - ./podinfo
-        - --port=9898
-        - --port-metrics=9797
-        - --grpc-port=9999
-        - --grpc-service-name=podinfo
-        - --level=info
+        - image: 181637548333.dkr.ecr.us-west-1.amazonaws.com/aws-ecr-kubetwittersample:1.0.0
+          imagePullPolicy: Always
+          name: podinfod
+          ports:
+            - containerPort: 5000
+#      containers:
+#      - name: podinfod
+#        image: stefanprodan/podinfo:3.1.0
+#        imagePullPolicy: IfNotPresent
+#        ports:
+#        - name: http
+#          containerPort: 9898
+#          protocol: TCP
+#        - name: http-metrics
+#          containerPort: 9797
+#          protocol: TCP
+#        - name: grpc
+#          containerPort: 9999
+#          protocol: TCP
+#        command:
+#        - ./podinfo
+#        - --port=9898
+#        - --port-metrics=9797
+#        - --grpc-port=9999
+#        - --grpc-service-name=podinfo
+#        - --level=info
         env:
         - name: PODINFO_UI_COLOR
           value: "#34577c"
