--- a/base/demo/podinfo/deployment.yaml
+++ b/base/demo/podinfo/deployment.yaml
@@ -19,59 +19,47 @@ spec:
     metadata:
       annotations:
         prometheus.io/scrape: "true"
-        prometheus.io/port: "9797"
+        prometheus.io/port: "5000"
       labels:
         app: podinfo
         scheduler: fargate
     spec:
       containers:
-        - image: 181637548333.dkr.ecr.us-west-1.amazonaws.com/aws-ecr-kubetwittersample:1.0.0
-          imagePullPolicy: Always
-          name: podinfod
-          ports:
-            - containerPort: 5000
+      - image: 181637548333.dkr.ecr.us-west-1.amazonaws.com/aws-ecr-kubetwittersample:1.0.0
+        imagePullPolicy: Always
+        name: podinfod
+        ports:
+        - containerPort: 5000
+          protocol: TCP
 #      containers:
-#      - name: podinfod
-#        image: stefanprodan/podinfo:3.1.0
-#        imagePullPolicy: IfNotPresent
-#        ports:
-#        - name: http
-#          containerPort: 9898
-#          protocol: TCP
-#        - name: http-metrics
-#          containerPort: 9797
-#          protocol: TCP
-#        - name: grpc
-#          containerPort: 9999
-#          protocol: TCP
-#        command:
-#        - ./podinfo
-#        - --port=9898
-#        - --port-metrics=9797
-#        - --grpc-port=9999
-#        - --grpc-service-name=podinfo
-#        - --level=info
+#        - image: 181637548333.dkr.ecr.us-west-1.amazonaws.com/aws-ecr-kubetwittersample:1.0.0
+#          imagePullPolicy: Always
+#          name: podinfod
+#          ports:
+#          - name: http
+#            containerPort: 5000
+#            protocol: TCP
         env:
         - name: PODINFO_UI_COLOR
           value: "#34577c"
-        livenessProbe:
-          exec:
-            command:
-            - podcli
-            - check
-            - http
-            - localhost:9898/healthz
-          initialDelaySeconds: 5
-          timeoutSeconds: 5
-        readinessProbe:
-          exec:
-            command:
-            - podcli
-            - check
-            - http
-            - localhost:9898/readyz
-          initialDelaySeconds: 5
-          timeoutSeconds: 5
+#        livenessProbe:
+#          exec:
+#            command:
+#            - podcli
+#            - check
+#            - http
+#            - localhost:5000/metrics
+#          initialDelaySeconds: 5
+#          timeoutSeconds: 5
+#        readinessProbe:
+#          exec:
+#            command:
+#            - podcli
+#            - check
+#            - http
+#            - localhost:5000/metrics
+#          initialDelaySeconds: 5
+#          timeoutSeconds: 5
         resources:
           requests:
             cpu: 100m
